[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "threerra"
version = "0.0.2"
license = {file = "LICENSE"}
authors = [
  { name="Jorge Gidi", email="jorgegidi@gmail.com" },
]
description = "A Qiskit module for three-level systems"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
Homepage = "https://github.com/jgidi/threerra/"
